# TalentSift-AI

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
app/: __init__.py  auth.py  config.py  database.py  jobs_manager.py  main.py  models.py
app/agents/: __init__.py  graph.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Auth.tsx  Dashboard.tsx  JobView.tsx
