[project]
name = "talentsift-ai"
version = "0.1.0"
description = "Multi-agent AI-powered resume shortlisting using LangGraph, Ollama, and FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
    "sqlalchemy>=2.0.51",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "pypdf>=6.14.2",
    "langgraph>=1.2.6",
    "langchain-ollama>=1.1.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
serve = "python -m app.main"
